Teste de imagem

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img class="imagem_logo" src="/public/logo_alura.png" alt="Logo Alura">
+        <img class="imagem_logo" src="./public/logo_alura.png" alt="Logo Alura">
     </header>
     
     <main>
