--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>            
             <!-- Div for the alert -->
             <div class="alert__text">
-                <img src="/public/!.png">
+                <img src="./public/!.png">
                 <a>Apenas letras minúsculas e sem acento.</a>
             </div>
             <!-- Div for the buttons -->
@@ -32,7 +32,7 @@
         <aside class="result">
             <!-- This section is related to another part of the page -->
             <div class="result__mensage">
-                <img  class="result__image" src="/public/alura-design-art.svg">
+                <img  class="result__image" src="public/alura-design-art.svg">
                 <h3 class="result__mensage__first">Nenhuma mensagem encontrada</h3>
                 <p class="result__mensage__second">Digite um texto que você deseja criptografar ou descriptografar.</p>
             </div>
@@ -60,6 +60,6 @@
 
         <p>Developed by @herculesnatan</p>
     </footer>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
